@@ -3,6 +3,8 @@ fakechroot (2.9-1) unstable; urgency=medium
   * src/libfakechroot.c:
     - Fixed getpeername(2) and getsockname(2).  Thanks to Axel Thimm and
       Fedora people.
+    - New function: futimesat(2).  Fixes "touch -m" command.
+    - New function: bindtextdomain(3).
   * debian/packages:
     - Autodetected biarch libdir for amd64 architecture on Debian and Ubuntu.
     - Build-Depends: lsb-release
